# ytune

./: GEMINI.md  pyproject.toml  ytune-future-considerations.md  ytune-plan.md  ytune-spec.md
src/ytune/: __init__.py  api.py  app.py  db.py  models.py  player.py
tests/: test_api.py  test_db.py  test_models.py  test_player.py  test_tui.py
