[project]
name = "ytune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nurahfezan Nordin", email = "nurahfezanbinnordin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "python-mpv>=1.0.8",
    "textual>=8.1.1",
    "yt-dlp>=2026.2.21",
    "ytmusicapi>=1.11.5",
]

[project.scripts]
ytune = "ytune:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "3.12.*"
mpv = ">=0.39.0"

[tool.pixi.tasks]
ytune = { cmd = "ytune", env = { LC_ALL = "C", LC_NUMERIC = "C" } }
test = "pytest"

[tool.pixi.feature.dev.tasks]
lint = "ruff check src/ tests/"
fmt = "ruff format src/ tests/"
typecheck = "pyright"
audit = "bandit -r src/ -ll"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.pypi-dependencies]
ytune = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-mock = "*"

[tool.pixi.feature.dev.pypi-dependencies]
bandit = ">=1.9.4,<2"
ruff = ">=0.15.6, <0.16"
pyright = ">=1.1.408, <2"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I"]
# E/F: pycodestyle + pyflakes, UP: pyupgrade (catches deprecated typing), B: bugbear, I: isort

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src"]
venvPath = ".pixi/envs"
venv = "dev"
